# data-mining-2023

./: .gitignore  README.md  pyproject.toml
Assignments/A1/: A1.ipynb  Assignment1.md
Assignments/A2/: A2.ipynb
Assignments/A3/: A3.ipynb
Assignments/A4/: A4.ipynb
Assignments/A5/: A5.ipynb
Assignments/submissions/: Assignment1.md
Lectures/Lecture-02/: Table of Contents.html
Lectures/Lecture-04/: Lecture-04.ipynb
