[tool.poetry]
name = "data-mining-2023"
version = "0.1.0"
description = "Data Mining Lectures and Assignments for Summer 23 \u001b[D"
authors = ["pfenningpat <pat.pfenning@blastpoint.com>"]
readme = "README.md"
packages = [{include = "data_mining_2023"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
pandas = "^2.0.2"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
nbconvert = "^7.7.3"
pip = "^23.2.1"
scikit-learn = "^1.3.0"
mlxtend = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
